--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.focus-error-text-box {
+  @apply mt-1 block w-full rounded-md border
+  border-slate-300 bg-white px-3 py-2 text-sm
+  placeholder-slate-400 shadow-sm
+  invalid:border-pink-500 invalid:text-pink-600
+  focus:border-sky-500 focus:outline-none focus:ring-1 focus:ring-sky-500
+  focus:invalid:border-pink-500 focus:invalid:ring-pink-500
+  disabled:border-slate-200 disabled:bg-gray-100 disabled:text-slate-500 disabled:shadow-none;
+}
+
+.rounded-card {
+  @apply mx-auto max-w-xs rounded-xl bg-white shadow-md;
+}
+
+.toast-card {
+  @apply mb-5 flex flex-wrap items-center space-x-4 p-6 pt-2;
+}
