--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 .focus-error-text-box {
   @apply mt-1 block w-full rounded-md border
-  border-slate-300 bg-white px-3 py-2 text-sm
+  border-slate-300 bg-white px-3 py-2
   placeholder-slate-400
   shadow-sm invalid:border-pink-500
   invalid:text-pink-600 focus:border-sky-500
