--- a/src/index.css
+++ b/src/index.css
@@ -3,20 +3,54 @@
 @tailwind utilities;
 
 .focus-error-text-box {
-  @apply mt-1 block w-full rounded-md border
-  border-slate-300 bg-white px-3 py-2
-  placeholder-slate-400
-  shadow-sm invalid:border-pink-500
-  invalid:text-pink-600 read-only:border-slate-300
-  read-only:bg-gray-200 read-only:text-slate-500 read-only:shadow-none focus:border-sky-500
-  focus:outline-none focus:ring-1
-  focus:ring-sky-500 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 dark:bg-slate-200 dark:read-only:bg-slate-500 dark:read-only:text-slate-300;
+  @apply mt-1
+          block
+          w-full
+          rounded-md
+          border border-slate-300
+          bg-white
+          px-3
+          py-2
+          placeholder-slate-400
+          shadow-sm
+          invalid:border-pink-500 invalid:text-pink-600
+          read-only:border-slate-300
+          read-only:bg-gray-200
+          read-only:text-slate-500
+          read-only:shadow-none
+          focus:border-sky-500
+          focus:outline-none
+          focus:ring-1
+          focus:ring-sky-500
+          focus:invalid:border-pink-500
+          focus:invalid:ring-pink-500
+          dark:bg-slate-200
+          dark:read-only:bg-slate-500
+          dark:read-only:text-slate-300;
 }
 
 .rounded-card {
-  @apply mx-auto max-w-xs rounded-xl bg-white shadow-md dark:bg-slate-900 md:max-w-2xl;
+  @apply mx-auto
+          max-w-xs
+          rounded-xl
+          bg-white
+          shadow-md
+          dark:bg-slate-900
+          md:max-w-2xl;
 }
 
 .toast-card {
   @apply mb-5 flex flex-wrap items-center space-x-4 p-6 pt-2;
+}
+
+.hamburgerlines {
+  @apply absolute
+          -ml-4
+          h-0.5
+          w-4
+          bg-slate-500
+          transition
+          delay-75
+          group-hover:bg-slate-900
+          dark:bg-slate-500 dark:group-hover:bg-slate-300;
 }
