--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@
 }
 
 .toast-card {
-  @apply mb-5 flex flex-wrap items-center space-x-4 p-6 pt-2;
+  @apply flex flex-wrap items-center space-x-4 p-6 pt-2;
 }
 
 .hamburgerlines {
