--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
 }
 
 .toast-card {
-  @apply flex max-w-sm flex-wrap items-center space-x-4 p-6 pt-2;
+  @apply flex max-w-sm flex-wrap items-center space-x-4 px-6 py-2;
 }
 
 .hamburgerlines {
