--- a/src/index.css
+++ b/src/index.css
@@ -2,25 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.nav-sheet {
-  @apply fixed
-      left-0
-      z-50
-      h-full
-      w-full
-      divide-y divide-gray-100
-      rounded
-      bg-slate-50
-      shadow
-      transition-transform
-      delay-100
-      duration-300
-      ease-in-out
-      dark:bg-gray-700
-      lg:hidden;
-}
-
-.darkmode-transition {
+* {
   @apply transition-colors duration-500 ease-in-out;
 }
 
@@ -57,16 +39,4 @@
 
 .toast-card {
   @apply flex max-w-sm flex-wrap items-center space-x-4 px-6 py-2;
-}
-
-.hamburgerlines {
-  @apply absolute
-          -ml-4
-          h-0.5
-          w-4
-          bg-slate-500
-          transition
-          delay-75
-          group-hover:bg-slate-900
-          dark:bg-slate-500 dark:group-hover:bg-slate-300;
 }
